crates/kernel/tests/table/snapshots/main__table__router__a_gapless_cycle_advances_without_a_load.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 366
expression: "walked(model, messages)"
---
[
    (
        Audio(
            Playhead(
                95s,
            ),
        ),
        One(
            Macos(
                PlaybackPosition(
                    95s,
                ),
            ),
        ),
        Playing {
            track: Track {
                path: "/tmp/track0.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0.flac",
                tagging: Read,
            },
            head: Playhead {
                offset: 95s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Elapsed(
            Mark(
                Revision(
                    0,
                ),
            ),
        ),
        Batch(
            [
                Audio(
                    Preload(
                        TrackRequest {
                            path: "/tmp/track1.flac",
                            gain: None,
                            revision: Revision(
                                1,
                            ),
                        },
                    ),
                ),
                Library(
                    PrefetchCover(
                        "/tmp/track1.flac",
                    ),
                ),
                Macos(
                    PlaybackPosition(
                        95s,
                    ),
                ),
            ],
        ),
        Playing {
            track: Track {
                path: "/tmp/track0.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0.flac",
                tagging: Read,
            },
            head: Playhead {
                offset: 95s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: Queued(
                Track {
                    path: "/tmp/track1.flac",
                    duration: Some(
                        100s,
                    ),
                    tags: Tags {
                        title: None,
                        artist: None,
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: None,
                        bitrate_kbps: None,
                        sample_rate_hz: None,
                        bits_per_sample: None,
                        channels: None,
                        replay_gain: None,
                    },
                    display: "track1.flac",
                    tagging: Read,
                },
            ),
        },
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Audio(
            TrackChanged,
        ),
        Batch(
            [
                Library(
                    AppendHistory(
                        HistoryEntry {
                            path: "/tmp/track1.flac",
                            title: "track1",
                            artist: None,
                            at: Moment(
                                0ns,
                            ),
                        },
                    ),
                ),
                Macos(
                    NowPlaying(
                        Some(
                            Track {
                                path: "/tmp/track1.flac",
                                duration: Some(
                                    100s,
                                ),
                                tags: Tags {
                                    title: None,
                                    artist: None,
                                    album: None,
                                    album_artist: None,
                                    date: None,
                                    genre: None,
                                    track: None,
                                    track_total: None,
                                    disc: None,
                                    composer: None,
                                    comment: None,
                                    lyrics: None,
                                },
                                audio_format: AudioFormat {
                                    format: None,
                                    bitrate_kbps: None,
                                    sample_rate_hz: None,
                                    bits_per_sample: None,
                                    channels: None,
                                    replay_gain: None,
                                },
                                display: "track1.flac",
                                tagging: Read,
                            },
                        ),
                    ),
                ),
                Audio(
                    Playback(
                        Playing,
                    ),
                ),
                Macos(
                    PlaybackState(
                        Playing,
                    ),
                ),
                Animate(
                    TrackChanged,
                ),
                Animate(
                    PlaybackChanged(
                        Play,
                    ),
                ),
                Macos(
                    PlaybackPosition(
                        0ns,
                    ),
                ),
                After {
                    delay: 90s,
                    message: Mark(
                        Revision(
                            2,
                        ),
                    ),
                },
            ],
        ),
        Playing {
            track: Track {
                path: "/tmp/track1.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track1.flac",
                tagging: Read,
            },
            head: Playhead {
                offset: 0ns,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 1,
            len: 3,
        },
        Cursor {
            index: 1,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Audio(
            Playhead(
                95s,
            ),
        ),
        One(
            Macos(
                PlaybackPosition(
                    95s,
                ),
            ),
        ),
        Playing {
            track: Track {
                path: "/tmp/track1.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track1.flac",
                tagging: Read,
            },
            head: Playhead {
                offset: 95s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 1,
            len: 3,
        },
        Cursor {
            index: 1,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Elapsed(
            Mark(
                Revision(
                    2,
                ),
            ),
        ),
        Batch(
            [
                Audio(
                    Preload(
                        TrackRequest {
                            path: "/tmp/track2.flac",
                            gain: None,
                            revision: Revision(
                                3,
                            ),
                        },
                    ),
                ),
                Library(
                    PrefetchCover(
                        "/tmp/track2.flac",
                    ),
                ),
                Macos(
                    PlaybackPosition(
                        95s,
                    ),
                ),
            ],
        ),
        Playing {
            track: Track {
                path: "/tmp/track1.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track1.flac",
                tagging: Read,
            },
            head: Playhead {
                offset: 95s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: Queued(
                Track {
                    path: "/tmp/track2.flac",
                    duration: Some(
                        100s,
                    ),
                    tags: Tags {
                        title: None,
                        artist: None,
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: None,
                        bitrate_kbps: None,
                        sample_rate_hz: None,
                        bits_per_sample: None,
                        channels: None,
                        replay_gain: None,
                    },
                    display: "track2.flac",
                    tagging: Read,
                },
            ),
        },
        None,
        Cursor {
            index: 1,
            len: 3,
        },
        Cursor {
            index: 1,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
]
