crates/kernel/tests/table/snapshots/main__table__router__a_hand_off_at_the_end_of_the_playlist_keeps_the_track.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Audio(
            TrackChanged,
        ),
        Batch(
            [
                Library(
                    AppendHistory(
                        HistoryEntry {
                            path: "/tmp/track1.flac",
                            title: "track1",
                            artist: None,
                            at: Moment(
                                0ns,
                            ),
                        },
                    ),
                ),
                Macos(
                    NowPlaying(
                        Some(
                            Track {
                                path: "/tmp/track1.flac",
                                duration: Some(
                                    100s,
                                ),
                                tags: Tags {
                                    title: None,
                                    artist: None,
                                    album: None,
                                    album_artist: None,
                                    date: None,
                                    genre: None,
                                    track: None,
                                    track_total: None,
                                    disc: None,
                                    composer: None,
                                    comment: None,
                                    lyrics: None,
                                },
                                audio_format: AudioFormat {
                                    format: None,
                                    bitrate_kbps: None,
                                    sample_rate_hz: None,
                                    bits_per_sample: None,
                                    channels: None,
                                    replay_gain: None,
                                },
                                display: "track1.flac",
                                tagging: Read,
                            },
                        ),
                    ),
                ),
                Audio(
                    Playback(
                        Playing,
                    ),
                ),
                Macos(
                    PlaybackState(
                        Playing,
                    ),
                ),
                Animate(
                    TrackChanged,
                ),
                Animate(
                    PlaybackChanged(
                        Play,
                    ),
                ),
                Macos(
                    PlaybackPosition(
                        0ns,
                    ),
                ),
            ],
        ),
        Playing {
            track: Track {
                path: "/tmp/track1.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track1.flac",
                tagging: Read,
            },
            head: Playhead {
                offset: 0ns,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 1,
            len: 2,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
